--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [main, master]
   schedule:
-    - cron: '30 1,13 * * *'  # 每天 09:30 和 21:30 (北京时间)
+    - cron: '0 17,18 * * *'  # UTC时间，对应北京时间 01:00 和 02:00
   workflow_dispatch:
     inputs:
       force_run:
